--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <p class="lead fw-normal">Tu herramienta multiuso 3 en 1 <br> ¡Descargala ya!</p>
       <a href="#">
 
-      <a download="calculate+.apk" href="files/calculator+.apk"><img  width="50%" src="img/google.png"></a>
+      <a download="calculate+.apk" href="files/calculate+.apk"><img  width="50%" src="img/google.png"></a>
 
       </a>
     </div>
@@ -133,7 +133,7 @@
     </div>
 
     <div class="col">
-      <div class="fondo card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/calculadora.PNG');   background-size: cover;">
+      <div class="fondo card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('img/calculadora.png');   background-size: cover;">
         <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1 texto-feature">
           <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Calculadora</h2>
           <ul class="d-flex list-unstyled mt-auto">
